--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -9,8 +9,10 @@
         <h2>Paste the XML into the box below and click "Import".</h2>
 
         <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea>
-        <!-- <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
-        <label for="classButton">Add Classes?</label> -->
+        <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
+        <label for="featuresButton">Add Subclasse Features?</label>
+        <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
+        <label for="classButton">Add Subclasses?</label>
         <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
         <label for="spellsButton">Add Spells?</label>
         <input class="update-checkbox" type="checkbox" value="0" name="creatureButton" checked>
