minor html formatting

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -8,15 +8,15 @@
 
         <h2>Paste the XML into the box below and click "Import".</h2>
 
-        <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea>
+        <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
-        <label for="featuresButton">Add Subclasse Features?</label>
+        <label for="featuresButton">Add Subclasse Features?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
-        <label for="classButton">Add Subclasses?</label>
+        <label for="classButton">Add Subclasses?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
-        <label for="spellsButton">Add Spells?</label>
+        <label for="spellsButton">Add Spells?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="creatureButton" checked>
-        <label for="creatureButton">Add Monsters?</label>
+        <label for="creatureButton">Add Monsters?</label><br>
         <!-- <input class="update-checkbox" type="checkbox" value="1" name="journalButton" checked>
         <label for="journalButton">Add Journals?</label> -->
         <input type="submit" class="import-xml" value="Import">
