works with importing from a url now

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -6,13 +6,13 @@
         <input  id="compendium-input" name="compendium-input" value="xml"></input>
         <p>Will create a compendium named <i>input</i>-spells and <i>input</i>-monsters</p>
 
-        <h2>Paste the XML into the box below and click "Import".</h2>
+        <h2>Paste the XML or URL to an XML into the box below and click "Import".</h2>
 
         <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
         <label for="featuresButton">Add Subclasse Features?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
-        <label for="classButton">Add Subclasses?</label><br>
+        <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
+        <label for="subclassButton">Add Subclasses?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
         <label for="spellsButton">Add Spells?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="creatureButton" checked>
