handles compendium reordering

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -19,6 +19,9 @@
         <label for="creatureButton">Add Monsters?</label><br>
         <!-- <input class="update-checkbox" type="checkbox" value="1" name="journalButton" checked>
         <label for="journalButton">Add Journals?</label> -->
-        <input type="submit" class="import-xml" value="Import">
+        <div class="flexrow">
+            <input type="submit" class="import-xml" value="Import">
+            <input type="submit" class="order-comp-button" value="Order Compendiums">
+        </div>
     </div>
 </div>
