Can now import feats

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -9,8 +9,10 @@
         <h2>Paste the XML or URL to an XML into the box below and click "Import".</h2>
 
         <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea><br>
+        <input class="update-checkbox" type="checkbox" value="0" name="featButton" checked>
+        <label for="featButton">Add Feats?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
-        <label for="featuresButton">Add Subclasse Features?</label><br>
+        <label for="featuresButton">Add Subclass Features?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
         <label for="subclassButton">Add Subclasses?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
