--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -15,6 +15,8 @@
         <label for="featuresButton">Add Subclass Features?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
         <label for="subclassButton">Add Subclasses?</label><br>
+        <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
+        <label for="classButton">Add Classes?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
         <label for="spellsButton">Add Spells?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="creatureButton" checked>
