A bunch of unusual import errors have been fixed

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -12,7 +12,7 @@
         <input class="update-checkbox" type="checkbox" value="0" name="featsButton" checked>
         <label for="featsButton">Add Feats?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
-        <label for="featuresButton">Add (Sub)Class Features?</label><br>
+        <label for="featuresButton">Add Class Features?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
         <label for="subclassButton">Add Subclasses?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
