--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -11,6 +11,8 @@
         <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featsButton" checked>
         <label for="featsButton">Add Feats?</label><br>
+        <input class="update-checkbox" type="checkbox" value="0" name="backgroundsButton" checked>
+        <label for="featsButton">Add Backgrounds?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
         <label for="featuresButton">Add Class Features?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
