--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -13,6 +13,8 @@
         <label for="featsButton">Add Feats?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="backgroundsButton" checked>
         <label for="featsButton">Add Backgrounds?</label><br>
+        <input class="update-checkbox" type="checkbox" value="0" name="itemsButton" checked>
+        <label for="featsButton">Add Items?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
         <label for="featuresButton">Add Class Features?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
