added races, does not handle racial features

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -12,7 +12,9 @@
         <input class="update-checkbox" type="checkbox" value="0" name="featsButton" checked>
         <label for="featsButton">Add Feats?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="backgroundsButton" checked>
-        <label for="featsButton">Add Backgrounds?</label><br>
+        <label for="backgroundsButton">Add Backgrounds?</label><br>
+        <input class="update-checkbox" type="checkbox" value="0" name="raceButton" checked>
+        <label for="raceButton">Add Race?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="itemsButton" checked>
         <label for="featsButton">Add Items?</label><br>
         <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
