Made some updates to the Race Imports. Handles Languages, Size, Speed, and ASI.

--- a/templates/xml_import_ui.html
+++ b/templates/xml_import_ui.html
@@ -8,25 +8,49 @@
 
         <h2>Paste the XML or URL to an XML into the box below and click "Import".</h2>
 
-        <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="featsButton" checked>
-        <label for="featsButton">Add Feats?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="backgroundsButton" checked>
-        <label for="backgroundsButton">Add Backgrounds?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="raceButton" checked>
-        <label for="raceButton">Add Race?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="itemsButton" checked>
-        <label for="featsButton">Add Items?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
-        <label for="featuresButton">Add Class Features?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
-        <label for="subclassButton">Add Subclasses?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
-        <label for="classButton">Add Classes?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
-        <label for="spellsButton">Add Spells?</label><br>
-        <input class="update-checkbox" type="checkbox" value="0" name="creatureButton" checked>
-        <label for="creatureButton">Add Monsters?</label><br>
+        <textarea id="all-xml" name="all-xml" rows="10" cols="50"></textarea>
+        <ul style="list-style-type: none; padding-left: 0px;">
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="featsButton" checked>
+                <label for="featsButton">Add Feats?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="backgroundsButton" checked>
+                <label for="backgroundsButton">Add Backgrounds?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="raceButton" checked>
+                <label for="raceButton">Add Race?</label>
+            </li>
+            <li style="padding-left: 20px;">
+                <input title="Don't use set scores, be able to put them where ever" class="update-checkbox" type="checkbox" value="0" name="abilitiesButton" checked>
+                <label for="abilitiesButton">Unbound Ability Scores</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="itemsButton" checked>
+                <label for="featsButton">Add Items?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="featuresButton" checked>
+                <label for="featuresButton">Add Class Features?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="subclassButton" checked>
+                <label for="subclassButton">Add Subclasses?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="classButton" checked>
+                <label for="classButton">Add Classes?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="spellsButton" checked>
+                <label for="spellsButton">Add Spells?</label>
+            </li>
+            <li>
+                <input class="update-checkbox" type="checkbox" value="0" name="creatureButton" checked>
+                <label for="creatureButton">Add Monsters?</label>
+            </li>
+        </ul>
         <!-- <input class="update-checkbox" type="checkbox" value="1" name="journalButton" checked>
         <label for="journalButton">Add Journals?</label> -->
         <div class="flexrow">
